# OpenGL_3D_Renderer

./: .gitignore  CMakeLists.txt  README.md
OpenGL_3D_Graphics_1.0/: OpenGL_3D_Graphics_1.0.sln
OpenGL_3D_Graphics_1.0/Dependencies/glad/include/glad/: glad.h
OpenGL_3D_Graphics_1.0/Dependencies/glad/src/: glad.c
OpenGL_3D_Graphics_1.0/OpenGL_3D_Graphics_1.0/: Camera.cpp  Camera.h  FragmentShaderCode.glsl  GLWindow.h  GlWindow.cpp  GlWindow.h  OpenGL_3D_Graphics_1.0.cpp  OpenGL_3D_Graphics_1.0.vcxproj  OpenGL_3D_Graphics_1.0.vcxproj.filters  ShapeData.h  ShapeGenerator.cpp  ShapeGenerator.h  Vertex.h  VertexShaderCode.glsl
OpenGL_3D_Graphics_1.0/source/: Camera.cpp  Camera.h  FragmentShaderCode.glsl  GLWindow.cpp  GLWindow.h  MainWindow.cpp  OpenGL_3D_Graphics_1.0.cpp  ShapeBuilder.cpp  ShapeBuilder.h  VertexShaderCode.glsl
